# chesnok_uz

./: README.md  data.json  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 03de6d6c8f19_.py  426c3b65f683_.py  60ed844edc7d_.py  6603b249a109_.py  676123d68160_add_created_at_and_updated_at_to_.py  7b4f2a3be4c9_add_created_at_and_updated_at_to_.py  86078b27c891_sdsfdf.py  8c96351ff4d1_.py  97dd5cd65b92_.py  9a2b9b30f870_.py  c55592854576_.py  c6a778e23bf5_.py  e267350a5432.py  fef57b490207_.py
app/: data.json  database.py  jsonapi.py  main.py  models.py  schemas.py
app/routers/: __init__.py  category.py  comment.py  post_tag.py  posts.py  proffesion.py  tag.py  user.py  user_search.py
app/schemas/: __init__.py  categroy_schema.py  comments_schema.py  post_schema.py  post_tag_schema.py  proffesion_schema.py  tag_schema.py  user_schema.py  user_search_schema.py
dict_json]/: jsonapi.py
