[project]
name = "chesnok-uz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.1",
    "dotenv>=0.9.9",
    "fastapi[standart]>=0.128.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.14",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]
